--- a/packages/core/src/components/cascader/styles.scss
+++ b/packages/core/src/components/cascader/styles.scss
@@ -2,21 +2,33 @@
   position: relative;
   display: inline-block;
 
+  .mining-sdk-tag-input__dropdown {
+    padding: 0;
+  }
+
   &__panels {
     @include flex_row;
-
-    max-height: 35%;
   }
 
   &__panel {
     @include flex_column;
 
+    height: 180px;
     overflow-y: auto;
+    padding: 4px;
 
     &--options {
       flex: 1;
       background-color: var(--mining-sdk-select-content-bg);
       border-left: 1px solid var(--mining-sdk-border-default-color);
+      padding: 0;
+    }
+
+    &--search {
+      flex: 1;
+      width: 100%;
+      background-color: var(--mining-sdk-select-content-bg);
+      border-left: none;
     }
   }
 
@@ -24,10 +36,9 @@
     @include flex_center;
 
     gap: 0.5rem;
-    padding: 0.625rem 0.75rem;
-    border-left: 3px solid transparent;
+    padding: 5px 12px;
     transition: all 0.2s ease;
-    margin: 0 0.25rem;
+    border-radius: 4px;
 
     &:hover:not(&--disabled):not(&--active) {
       background-color: rgba(var(--mining-sdk-color-white-rgb), 0.08);
@@ -44,7 +55,9 @@
 
     &-checkbox {
       flex-shrink: 0;
-
+      border-width: 1px;
+      width: 14px;
+      height: 14px;
       background-color: var(--mining-sdk-cascader-checkbox-bg);
       border-color: var(--mining-sdk-border-default-color);
 
@@ -92,7 +105,6 @@
   &__options-list {
     flex: 1;
     overflow-y: auto;
-    padding: 0.5rem;
   }
 
   &__option {
@@ -100,6 +112,7 @@
 
     gap: 0.75rem;
     padding: 5px 12px;
+    border-radius: 4px;
     width: 100%;
     cursor: pointer;
     transition: background-color 0.2s ease;
@@ -116,12 +129,28 @@
         background-color: transparent;
       }
     }
+
+    &--search {
+      // Search result items have full width
+      width: 100%;
+    }
+
+    &-label {
+      flex: 1;
+      font-size: 14px;
+      color: var(--mining-sdk-color-text-secondary);
+      user-select: none;
+    }
+
+    &-separator {
+      color: var(--mining-sdk-color-text-secondary);
+      opacity: 0.5;
+      padding: 0 0.25rem;
+    }
   }
 
-  &__option-label {
-    flex: 1;
-    font-size: 14px;
-    color: var(--mining-sdk-color-text-secondary);
-    user-select: none;
+  // Highlight matching search text
+  &__highlight {
+    color: var(--mining-sdk-cascader-color-highlight);
   }
 }
