--- a/packages/core/src/styles/index.scss
+++ b/packages/core/src/styles/index.scss
@@ -47,3 +47,4 @@
 @import '../components/badge/styles';
 @import '../components/list-view-filter/styles';
 @import '../components/doughnut-chart/styles';
+@import '../components/mosaic/styles';
