(feature) extract stats export component

--- a/packages/foundation/src/styles/index.scss
+++ b/packages/foundation/src/styles/index.scss
@@ -5,3 +5,4 @@
 @forward '../components/domain/pool-details-card/styles';
 @forward '../components/domain/pool-details-popover/styles';
 @forward '../components/domain/chart-wrapper/styles';
+@forward '../components/domain/stats-export/styles';
